--- a/views/index.html
+++ b/views/index.html
@@ -16,6 +16,14 @@
 	
 </script>
 
+
+<script type="text/javascript">
+function googleTranslateElementInit() {
+  new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+}
+</script><script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+
+
 <!-- Bootstrap Core CSS -->
 <link href="/stylesheets/bootstrap.min.css" rel="stylesheet">
 
@@ -89,6 +97,7 @@
 </head>
 
 <body ng-controller="layoutmodule">
+	<div id="google_translate_element"></div>
 	<div id="wrapper">
 		<!-- Navigation -->
 		<nav class="navbar navbar-default navbar-static-top" role="navigation"
