changing ui based on completion status booking overview

--- a/views/bookingoverview.html
+++ b/views/bookingoverview.html
@@ -12,7 +12,7 @@
 					<a href="javascript:void(0);">
 						<div class="o">
 							<div class="i">
-								<span class="check"> <i class="fa fa-check"></i>
+								<span id = "rcount"> <i id = "rcounti" ></i>
 								</span> Register a space
 							</div>
 						</div>
@@ -24,7 +24,7 @@
 					<a href="javascript:void(0);">
 						<div class="o">
 							<div class="i">
-								<span class="check"> <i class="fa fa-check"></i>
+								<span id="icount"> <i id = "icounti" ></i>
 								</span> Add at least one photo
 							</div>
 						</div>
@@ -48,7 +48,7 @@
 					<a href="javascript:void(0);">
 						<div class="o">
 							<div class="i">
-								<span class="check"> <i class="fa fa-check"></i>
+								<span id = "pcount" > <i id = "pcounti" ></i>
 								</span>Payment information added
 							</div>
 						</div>
