--- a/views/signin.html
+++ b/views/signin.html
@@ -131,7 +131,7 @@
 										$('.alert').show();
 									}else {
 										sessionStorage.setItem("userid",response.results);
-									    alert(sessionStorage.getItem("userid"));
+									    //alert(sessionStorage.getItem("userid"));
 										window.location = '/';
 										
 									}
