--- a/views/index.html
+++ b/views/index.html
@@ -844,7 +844,7 @@ function googleTranslateElementInit() {
 						"spotid" : spotid,
 						"review" : $scope.newReview,
 						"rating" : $scope.newRating,
-						"userid" : sessionStorage.getItem("userid");
+						"userid" : sessionStorage.getItem("userid")
 					}
 				})
 						.success(
