--- a/views/billing.html
+++ b/views/billing.html
@@ -175,10 +175,10 @@
 				<div class="tab-content">
 					<div id="stripe" class="tab-pane fade in active">
 						<script src='https://js.stripe.com/v2/' type='text/javascript'></script>
-						<form accept-charset="UTF-8" action="/" class="require-validation"
+						<form accept-charset="UTF-8" class="require-validation"
 							data-cc-on-file="false"
 							data-stripe-publishable-key="pk_test_ijyDkRpvYl8acC3UQ2M8rjGU"
-							id="payment-form" method="post">
+							id="payment-form">
 							<div style="margin: 0; padding: 0; display: inline">
 								<input name="utf8" type="hidden" value="✓" /><input
 									name="_method" type="hidden" value="PUT" /><input
@@ -199,7 +199,7 @@
 							<div class='form-row'>
 								<div class='form-group card required'>
 									<label class='control-label'>Card Number</label> <input id="cardnum" 
-										autocomplete='off' class='form-control card-number' size='20'
+										autocomplete='off' pattern="[0-9]{4}-[0-9]{4}-[0-9]{4}-[0-9]{4}" class='form-control card-number' size='20'
 										type='text'>
 								</div>
 							</div>
