--- a/views/billing.html
+++ b/views/billing.html
@@ -154,7 +154,7 @@
 				<li class="active">Billing</li>
 			</ol>
 		</div>
-		<div class="panel" style="margin-top: -1.2%">
+		<div class="panel" style="margin-top: -1.2%" id="addpayment">
 			<div class="panel-heading display-table">
 				<div class="row display-tr">
 					<span
@@ -168,7 +168,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="container"
+	<div class="container" id="paymentDetails" 
 		style="width: 100% !important; background-color: #fff; margin-top: -1.2%">
 		<div class="row">
 			<div class="col-sm-6">
@@ -271,6 +271,9 @@
  -->
 		<br> <br> <br>
 	</div>
+	</div>
+	<div class="" id="added">
+		
 	</div>
 	</div>
 	</div>
