--- a/views/search.html
+++ b/views/search.html
@@ -30,7 +30,7 @@
 							<label style="padding-top: 5px;">Time</label>
 						</div>
 						<div class="col-sm-2">
-							<select class="form-control" id="sel1" ng-model="starttime">
+							<select class="form-control" id="starttime" ng-model="starttime">
 								<option value="00:00">12:00 AM</option>
 								<option value="01:00">01:00 AM</option>
 								<option value="02:00">02:00 AM</option>
@@ -70,7 +70,7 @@
 							<label style="padding-top: 5px;">Time</label>
 						</div>
 						<div class="col-sm-2">
-							<select class="form-control" id="sel1" ng-model="endtime">
+							<select class="form-control" id="endtime" ng-model="endtime">
 								<option value="00:00">12:00 AM</option>
 								<option value="01:00">01:00 AM</option>
 								<option value="02:00">02:00 AM</option>
