--- a/views/search.html
+++ b/views/search.html
@@ -1,4 +1,15 @@
 <!-- /.row -->
+<style type="text/css">
+		#legend{
+  float:left;
+  height:15px;
+  width:20%;
+  font-size:18px;
+  font-weight: 1px solid;
+  color:black;
+		}
+</style>
+
 <div id="partialview" style="padding-top: 3%"
 	ng-controller="searchmodule">
 	<div class="baseline">
@@ -148,4 +159,5 @@
 			</div>
 		</div>
 	</div>
+	<div id="legend"><b>Map Legend</b></div>
 </div>
