--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -74,7 +74,7 @@
 					</div>
 				</div>
 				<div class="col-md-3 col-sm-6">
-					<div id="site-visits" class="dash-widget-item bgm-teal border">
+					<div id="site-visits" style="height: 600px;" class="dash-widget-item bgm-teal border">
 						<div class="dash-widget-header">
 							<div align="center" class="p-20">
 								<div class="dash-widget-visits" id="chart4"></div>
@@ -92,9 +92,6 @@
 							<br> <small>Total Clicks</small>
 							<h3 class="m-0 f-400" id="totalclick">0</h3>
 						</div>
-					</div>
-					<div align="center">
-						<div id="odometer" class="odometer">123</div>
 					</div>
 				</div>
 			</div>
