--- a/views/index.html
+++ b/views/index.html
@@ -1860,28 +1860,32 @@ function validatePaymentInfo(userid, spotid) {
 	}
 </script>
 <script>
-	angular.module('myApp').controller('addListingController',
-			addListingController);
+	angular.module('myApp').controller('addListingController', addListingController);
 	function addListingController($scope, $http) {
 			$scope.addlisting1 = function(){
+				var listingType;
+				if (document.getElementById('radio-choice-1').checked) {
+					listingType = "Parking";
+				} else {
+					listingType = "Garage"
+				}
 				var user_id = sessionStorage.getItem("userid");
 					$http({
 			            method: 'POST',
 			            url: '/addlistings',
-			            data: { "user_id": user_id,"location": String(document.getElementById('txtLocation').value), "radio1":document.getElementById('radio-choice-1').checked ,"radio2":document.getElementById('radio-choice-2').checked,"description" : document.getElementById('description').value, "numberOfSpaces":document.getElementById('numberOfSpaces').value, "rental1" : document.getElementById('rental-radio-choice-1').checked, "rental2":document.getElementById('rental-radio-choice-2').checked, "rental3" :document.getElementById('rental-radio-choice-3').checked, "checkbox1":document.getElementById('checkbox-radio-choice-1').checked, "checkbox2" :document.getElementById('checkbox-radio-choice-2').checked, "checkbox3":document.getElementById('checkbox-radio-choice-3').checked, "checkbox4":document.getElementById('checkbox-radio-choice-4').checked, "checkbox5":document.getElementById('checkbox-radio-choice-5').checked,"checkbox6":document.getElementById('checkbox-radio-choice-6').checked,"checkbox7":document.getElementById('checkbox-radio-choice-7').checked,"checkbox8":document.getElementById('checkbox-radio-choice-8').checked,"checkbox9":document.getElementById('checkbox-radio-choice-9').checked,"checkbox10":document.getElementById('checkbox-radio-choice-10').checked,"checkbox11":document.getElementById('checkbox-radio-choice-11').checked,"checkbox12":document.getElementById('checkbox-radio-choice-12').checked, "instructions":document.getElementById('instructions').value, "image1":document.getElementById('image1').value,"image2":document.getElementById('image2').value,"image3":document.getElementById('image3').value }
+			            data: { "userid": user_id,"location": String(document.getElementById('txtLocation').value), "listingType": listingType,"description" : document.getElementById('description').value, "numberOfSpaces":document.getElementById('numberOfSpaces').value, "rental1" : document.getElementById('rental-radio-choice-1').checked, "rental2":document.getElementById('rental-radio-choice-2').checked, "rental3" :document.getElementById('rental-radio-choice-3').checked, "checkbox1":document.getElementById('checkbox-radio-choice-1').checked, "checkbox2" :document.getElementById('checkbox-radio-choice-2').checked, "checkbox3":document.getElementById('checkbox-radio-choice-3').checked, "checkbox4":document.getElementById('checkbox-radio-choice-4').checked, "checkbox5":document.getElementById('checkbox-radio-choice-5').checked,"checkbox6":document.getElementById('checkbox-radio-choice-6').checked,"checkbox7":document.getElementById('checkbox-radio-choice-7').checked,"checkbox8":document.getElementById('checkbox-radio-choice-8').checked,"checkbox9":document.getElementById('checkbox-radio-choice-9').checked,"checkbox10":document.getElementById('checkbox-radio-choice-10').checked,"checkbox11":document.getElementById('checkbox-radio-choice-11').checked,"checkbox12":document.getElementById('checkbox-radio-choice-12').checked, "instructions":document.getElementById('instructions').value, "image1":document.getElementById('image1').value,"image2":document.getElementById('image2').value }
 			         }).success(function(response){
 			        	 var resp= JSON.parse(JSON.stringify(response));
 				         console.log(resp);
 				    }).error(function(error){
-				    	document.getElementById("reviewresult").innerHTML="Adding review failed";
+
 			        });
 
 
-		};
+			};
 	}
 
-	angular.module('myApp').controller('addPaymentController',
-			addPaymentController);
+	angular.module('myApp').controller('addPaymentController', addPaymentController);
 	function addPaymentController($scope, $http) {
 		var user_id = sessionStorage.getItem("userid");
 		console.log(user_id);
@@ -1893,12 +1897,15 @@ function validatePaymentInfo(userid, spotid) {
 	         }).success(function(response){
 	        	 var resp= JSON.parse(JSON.stringify(response));
 		         console.log(resp);
-		         alert(resp);
+		         document.getElementById("addpayment").innerHTML=resp;
+		         $('#paymentDetails').hide();
 		    }).error(function(error){
 		    	alert("Server Error. Try again later");
 	        });
 		}
 	}
+
+
 </script>
 <script>
 	angular.module('myApp')
