--- a/views/index.html
+++ b/views/index.html
@@ -1877,6 +1877,7 @@ function validatePaymentInfo(userid, spotid) {
 			         }).success(function(response){
 			        	 var resp= JSON.parse(JSON.stringify(response));
 				         console.log(resp);
+				         alert("listing added successfully.");
 				    }).error(function(error){
 
 			        });
